@startuml

title __STOCKANALYSER's Class Diagram__\n

  namespace com.StockExchangeModel {
    namespace StockExchange {
      namespace StockAnalyser {
        class com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock {
            ~ date : Date
            ~ lastPrice : double
            ~ previousClosePrice : double
            + AnalysableStock()
            {static} + compare()
            + compareTo()
            + getDate()
            + getLastPrice()
            + getPreviousClosePrice()
            + setDate()
            + setLastPrice()
            + setPreviousClosePrice()
            + toString()
        }
        class com.StockExchangeModel.StockExchange.StockAnalyser.StockAnalyser {
            ~ analysableStocks : ArrayList<AnalysableStock>
            + StockAnalyser()
            + addAnalysableStock()
            + addAnalysableStocksFromCSV()
            + analyse()
            + getAnalysableStocks()
            {static} + printAnalysedResults()
        }
      }
    }
  }
  

  com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock .up.|> java.lang.Comparable
  com.StockExchangeModel.StockExchange.StockAnalyser.AnalysableStock -up-|> com.StockExchangeModel.StockExchange.Company.Stock
  com.StockExchangeModel.StockExchange.StockAnalyser.StockAnalyser -up-|> com.StockExchangeModel.StockExchange.Interpreter.Parser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
